platform/k8s/base/services/shipping/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
  namespace: atlas
  labels:
    app: shipping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: shipping
        component: backend
    spec:
      containers:
        - name: shipping
          image: nitros64/shipping-service:1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8089
              name: http
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8089
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 30

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8089
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8089
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
