platform/k8s/base/services/shipping/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-shipping
spec:
  serviceName: postgres-shipping
  replicas: 1
  selector:
    matchLabels:
      app: postgres-shipping
  template:
    metadata:
      labels:
        app: postgres-shipping
    spec:
      containers:
        - name: postgres
          image: postgres:17
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-shipping-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - shipping
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - shipping
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "25m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"   
  volumeClaimTemplates:
    - metadata:
        name: postgres-shipping-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
