platform/k8s/base/services/shipping/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-shipping
spec:
  selector:
    app: postgres-shipping
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
