platform/k8s/base/services/shipping/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
spec:
  selector:
    app: shipping
  ports:
    - name: http
      port: 80
      targetPort: 8089
  type: ClusterIP
