platform/k8s/base/services/shipping/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shipping-service-netpol
  namespace: atlas
spec:
  podSelector:
    matchLabels:
      app: shipping
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: atlas
      ports:
        - protocol: TCP
          port: 8089

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres-shipping
      ports:
        - protocol: TCP
          port: 5432

    - to:
        - podSelector:
            matchLabels:
              app: kafka
      ports:
        - protocol: TCP
          port: 9092

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
